clusters/home-workers/ingress-nginx/blog-teamhephy-info/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: blog-teamhephy-info
  namespace: ingress-nginx
spec:
  ports:
    - name: traef-ingress
      protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 0
---
# See gitno-hephy-pro which has the same backend
kind: Endpoints
apiVersion: v1
metadata:
  name: blog-teamhephy-info
  namespace: ingress-nginx
subsets:
- addresses:
  - ip: 10.17.12.201
  ports:
  - port: 80
    name: traef-ingress-http
  - port: 443
    name: traef-ingress
